fixed faq too tall

--- a/css/style.css
+++ b/css/style.css
@@ -1011,6 +1011,7 @@ input[type=text]:focus {
     flex-direction: row;
     padding-top: 0rem;
     width: 100%;
+    height: 25rem;
   }
   .faq-column {
     width: 22.5rem;
