--- a/sass/_faq.scss
+++ b/sass/_faq.scss
@@ -172,6 +172,7 @@ input[type=text]:focus {
         flex-direction: row;
         padding-top: 0rem;
         width:100%;
+        height: 25rem;
     }
     .faq-column {
         width: 22.5rem;
